--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=crepe
+
+okta.oauth2.issuer={DOMAIN}
+okta.oauth2.client-id={CLIENT_ID}
+okta.oauth2.client-secret={CLIENT_SECRET}
